# Plutus

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml
.git-hooks/: README.md  commit-msg  pre-commit
plutus/: Cargo.toml  build.rs
plutus-core/: Cargo.toml
plutus-core/src/: client.rs  lib.rs  serde_as.rs
plutus-core/src/api/: info.rs  live.rs  macros.rs  mod.rs  passport.rs
plutus-core/src/data/: info.rs  live.rs  macros.rs  passport.rs
plutus-core/src/data/live/: cmds.rs
plutus/migrations/00000000000001/: down.sql  up.sql
plutus/src/: config.rs  error.rs  main.rs  models.rs  resp.rs  routes.rs  schema.rs  state.rs
src/: client.rs  main.rs  path.rs  serde_as.rs
src/api/: info.rs  live.rs  macros.rs  mod.rs  passport.rs
src/data/: info.rs  live.rs  macros.rs  mod.rs  passport.rs  share.rs
src/data/live/: cmds.rs
