[package]
name = "plutus-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Colerar <233hbj@gmail.com>"]

[dependencies]
anyhow = "1.0"
brotli = "3.3.4"
byteorder = "1.4.3"
cookie_store = "0.20"
directories = "5.0"
either = { version = "1.8.1", features = ["serde"] }
flate2 = "1.0.25"
futures-core = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
indoc = "2.0.1"
log = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2.15"
once_cell = "1.17.1"
parking_lot = "0.12.1"
paste = "1.0"
reqwest_cookie_store = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.12"
serde_with = "3"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde"] }
url = "2.3.1"

[dependencies.tokio-tungstenite]
version = "0.20"
default-features = false
features = ["connect", "rustls-tls-native-roots"]

[dependencies.tokio]
version = "1.27.0"
default-features = false
features = ["net", "rt-multi-thread", "macros", "parking_lot"]

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = [
  "rustls-tls-native-roots",
  "cookies",
  "json",
  # Proxy
  "socks",
  # Compression
  "brotli",
  "gzip",
  "deflate",
]

[dev-dependencies]
hex = "0.4.3"
