[package]
name = "plutus"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Colerar <233hbj@gmail.com>"]

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
axum = "0.6.20"
bb8 = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["cargo", "derive", "wrap_help"] }
plutus-core = { path = "../plutus-core", package = "plutus-core" }
dashmap = "5.5.3"
diesel = { version = "2.1.4", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
either = "1.9.0"
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
qr2term = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
  "sync",
  "parking_lot",
  "macros",
  "time",
  "rt-multi-thread",
] }
toml = "0.8.8"
tower-http = { version = "0.4.4", features = ["compression-full", "timeout"] }
termimad = "0.26.1"
terminal-link = "0.1.0"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = [
  "rustls-tls-native-roots",
  "cookies",
  "json",
  # Proxy
  "socks",
  # Compression
  "brotli",
  "gzip",
  "deflate",
]
